--- a/view/style/main.css
+++ b/view/style/main.css
@@ -48,12 +48,6 @@ html {
 	padding: 12rem 0rem;
 }
 
-#home .vertical.segment .selection.list .item {
-	color: #fff;
-	cursor: default;
-	font-size: 1.1em;
-}
-
 #home .vertical.segment .right {
 	text-align: right;
 }
@@ -67,8 +61,27 @@ html {
 	min-height: 50px;
 }
 
+#home .tabular.menu .item {
+	color: #fff;
+}
+
+#home .tabular.menu .active.item {
+	color: #000;
+}
+
 #home .selection.list {
 	margin: 0em -0.5em;
+}
+
+#home .selection.list .item {
+	cursor: default;
+	color: #222;
+	font-size: 1.1em;
+	font-weight: normal;
+}
+
+#home .selection.list .item .right.floated {
+	padding-top: 2em;
 }
 
 #home .logo.row {
@@ -87,6 +100,11 @@ html {
 	padding-bottom: 0.78571em;
 }
 
+#home .ui.form .field .green.label {
+	float: right;
+	margin-bottom: 2em;
+}
+
 #home .ui.form .field .button {
 	margin-top: 0.5em;
 	margin-bottom: 1em;
@@ -94,7 +112,7 @@ html {
 	width: 30%;
 }
 
-#home .ui.form .field .radio {
+#home .ui.form .field .checkbox {
 	margin-left: 1.25em;
 }
 
@@ -112,6 +130,7 @@ html {
 	#home .menu .right.menu > .mobile.item {
 		display: block;
 	}
+
 	#home .menu .right.menu > .mobile.item .menu {
 		left: auto;
 		right: 0em;
