--- a/view/style/main.css
+++ b/view/style/main.css
@@ -7,7 +7,6 @@ html {
 }
 
 #home .masthead {
-	background-image: url(../image/bg.jpg);
 	margin: 0em;
 	padding: 5rem 0rem;
 }
@@ -31,7 +30,8 @@ html {
 #home .masthead .image {
 	position: absolute;
 	left: 0%;
-	bottom: -110px;
+	bottom: -100px;
+	width: 250px;
 }
 
 #home .segment h1 {
@@ -151,7 +151,7 @@ html {
 	}
 
 	#home .masthead.segment .image {
-		width: 170px;
+		width: 160px;
 	}
 
 	#home .masthead.segment .button {
@@ -179,7 +179,9 @@ html {
 	}
 
 	#home .ui.form .field .green.label {
-		display: none;
+		position: relative;
+		float: right;
+		margin-top: 2em;
 	}
 
 }
