--- a/view/style/form.css
+++ b/view/style/form.css
@@ -1,8 +1,9 @@
 body {
 	max-width: 560px;
 	margin: 20px auto;
+	height: initial;
 }
 
 body .ui.info.message .header {
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
 }
